<resources>
  <string name="actfm_picture_clear">Clear Picture</string>
  <string name="TVA_add_comment">Add a comment…</string>
  <string name="name">Name</string>
  <string name="enter_filter_name">Enter filter name</string>
  <string name="backup_BPr_header">Backups</string>
  <string name="backup_BAc_import">Import tasks</string>
  <string name="backup_BAc_export">Export tasks</string>
  <string name="export_toast">Backed up %1$s to %2$s.</string>
  <string name="export_toast_no_tasks">No tasks to export.</string>
  <string name="import_summary_title">Restore summary</string>
  <string name="import_summary_message">
File %1$s contained %2$s.\n\n
%3$s imported,\n
%4$s already exist\n
%5$s had errors\n
  </string>
  <string name="import_progress_read">Reading task %d…</string>
  <string name="DLG_error_sdcard">Cannot access folder: %s</string>
  <string name="DLG_error_sdcard_general">Cannot access your SD card!</string>
  <string name="read_permission_label">Tasks Permission</string>
  <string name="discard_confirmation">Are you sure you want to discard your changes?</string>
  <string name="keep_editing">Keep editing</string>
  <string name="DLG_delete_this_task_question">Delete this task?</string>
  <string name="DLG_hour_minutes">Time (hours : minutes)</string>
  <string name="DLG_undo">Undo</string>
  <string name="WID_dateButtonUnset">Click to set</string>
  <string name="TLA_no_items">There are no tasks here.</string>
  <string name="TLA_menu_sort">Sort</string>
  <string name="TLA_menu_search">Search</string>
  <string name="TLA_menu_settings">Settings</string>
  <string name="TAd_hiddenFormat">%s [hidden]</string>
  <string name="TAd_completed">Finished\n%s</string>
  <string name="TAd_actionEditTask">Edit</string>
  <string name="SSD_sort_drag">Manual order with subtasks</string>
  <string name="SSD_sort_auto">Smart sort</string>
  <string name="SSD_sort_alpha">By title</string>
  <string name="SSD_sort_due">By due date</string>
  <string name="SSD_sort_importance">By priority</string>
  <string name="SSD_sort_modified">By last modified</string>
  <string name="FLA_search_filter">Matching \'%s\'</string>
  <string name="FLA_new_filter">Create new filter</string>
  <string name="TEA_title_hint">Task name</string>
  <string name="TEA_importance_label">Priority</string>
  <string name="TEA_no_date">No date</string>
  <string name="TEA_hideUntil_label">Hide until</string>
  <string name="TEA_hideUntil_display">Hide until %s</string>
  <string name="TEA_note_label">Description</string>
  <string name="TEA_estimatedDuration_label">How long will it take?</string>
  <string name="TEA_elapsedDuration_label">Time already spent</string>
  <string name="save">Save</string>
  <string name="TEA_timer_est">Est. %s</string>
  <string name="TEA_timer_elap">Elapsed %s</string>
  <string name="TEA_no_time">No time</string>
  <string name="due_date">Due date</string>
  <string name="due_time">Due time</string>
  <string name="day_before_due">Day before due</string>
  <string name="week_before_due">Week before due</string>
  <string comment="Used for displaying the chosen hide until value in the task edit screen. Should be the same as due_date, just without capitalization." name="TEA_hideUntil_due_date">due date</string>
  <string comment="Used for displaying the chosen hide until value in the task edit screen. Should be the same as due_time, just without capitalization." name="TEA_hideUntil_due_time">due time</string>
  <string comment="Used for displaying the chosen hide until value in the task edit screen. Should be the same as day_before_due, just without capitalization." name="TEA_hideUntil_day_before_due">day before due</string>
  <string comment="Used for displaying the chosen hide until value in the task edit screen. Should be the same as week_before_due, just without capitalization." name="TEA_hideUntil_week_before_due">week before due</string>
  <string name="TEA_control_when">When</string>
  <string name="TEA_control_repeat">Repeat</string>
  <string name="TEA_control_gcal">Calendar</string>
  <string name="TEA_control_importance">Priority</string>
  <string name="TEA_control_notes">Description</string>
  <string name="TEA_control_files">Files</string>
  <string name="TEA_control_reminders">Reminders</string>
  <string name="TEA_control_timer">Timer Controls</string>
  <string name="TEA_control_hidden_section">----Hide Always----</string>
  <string name="TEA_load_more">Load more…</string>
  <string name="CRA_ignore">Ignore</string>
  <string name="CRA_title">Need a meeting list?</string>
  <string name="CRA_ignore_body">You\'ve ignored several calendar events. Should Tasks stop asking you about them?</string>
  <string name="CRA_ignore_all">Ignore all events</string>
  <string name="CRA_ignore_this">Ignore this event only</string>
  <string name="CRA_speech_bubble_start">Looks like %s is starting soon. Want to create a list for action items?</string>
  <string name="CRA_speech_bubble_end">Looks like you just finished with %s. Want to create a list for action items?</string>
  <string name="CRA_postpone">Maybe afterwards</string>
  <string name="CRA_calendar_reminders_pref_title">Calendar assistant</string>
  <string name="CRA_calendar_reminders_pref_desc_enabled">Tasks will remind you about upcoming calendar events and prompt you to prepare for them</string>
  <string name="CRA_default_list_name">Action Items: %s</string>
  <string name="none">None</string>
  <string name="EPr_appearance_header">Appearance</string>
  <string name="EPr_filters_to_show_title">Filters to show</string>
  <string name="EPr_edit_screen_options">Edit screen options</string>
  <string name="EPr_beastMode_reset">Reset to defaults</string>
  <string name="EPr_fullTask_title">Show full task title</string>
  <string name="EPr_show_task_edit_comments">Show comments in task edit</string>
  <string name="task_list_options">Task list options</string>
  <string name="EPr_cal_end_or_start_at_due_time">Calendar event time</string>
  <string name="EPr_cal_end_at_due_time">End calendar events at due time</string>
  <string name="EPr_cal_start_at_due_time">Start calendar events at due time</string>
  <string name="EPr_manage_header">Manage old tasks</string>
  <string name="EPr_manage_purge_deleted">Purge deleted tasks</string>
  <string name="EPr_manage_purge_deleted_message">Do you really want to purge all your deleted tasks?\n\nThese tasks will be gone forever!</string>
  <string name="EPr_manage_purge_deleted_status">Purged %d tasks!</string>
  <string name="EPr_reset_preferences">Reset preferences</string>
  <string name="EPr_reset_preferences_warning">Preferences will be reset to default values</string>
  <string name="EPr_delete_task_data">Delete task data</string>
  <string name="EPr_delete_task_data_warning">All tasks will be permanently deleted</string>
  <string name="EPr_manage_delete_completed_gcal">Delete calendar events for completed tasks</string>
  <string name="EPr_manage_delete_completed_gcal_message">Do you really want to delete all your events for completed tasks?</string>
  <string name="EPr_manage_delete_completed_gcal_status">Deleted %d calendar events!</string>
  <string name="EPr_manage_delete_all_gcal">Delete all calendar events for tasks</string>
  <string name="EPr_manage_delete_all_gcal_message">Do you really want to delete all your events for tasks?</string>
  <string name="EPr_manage_delete_all_gcal_status">Deleted %d calendar events!</string>
  <string name="task_defaults">Task defaults</string>
  <string name="EPr_default_urgency_title">Default deadline</string>
  <string name="EPr_default_importance_title">Default priority</string>
  <string name="EPr_default_hideUntil_title">Default hide until</string>
  <string name="EPr_default_reminders_title">Default reminders</string>
  <string name="EPr_default_reminders_mode_title">Default ring/vibrate type</string>
  <string name="priority_high">High</string>
  <string name="priority_medium">Medium</string>
  <string name="priority_low">Low</string>
  <string name="no_deadline">No deadline</string>
  <string name="day_after_tomorrow">Day after tomorrow</string>
  <string name="next_week">Next week</string>
  <string name="dont_hide">Don\'t hide</string>
  <string name="no_deadline_reminder">No deadline reminders</string>
  <string name="at_deadline">At deadline</string>
  <string name="at_deadline_or_overdue">At deadline or overdue</string>
  <string name="BFE_Active">My Tasks</string>
  <string name="BFE_Recent">Recently modified</string>
  <string name="CFA_universe_all">Active Tasks</string>
  <string name="CFA_type_add">or</string>
  <string name="CFA_type_subtract">not</string>
  <string name="CFA_type_intersect">also</string>
  <string name="CFA_context_chain">%s has criteria</string>
  <string name="CFA_context_delete">Delete Row</string>
  <string name="CFA_help">Long press on items for additional options</string>
  <string name="CFA_button_add">Add Criteria</string>
  <string name="CFC_dueBefore_text">Due By: ?</string>
  <string name="CFC_dueBefore_name">Due By…</string>
  <string name="no_due_date">No Due Date</string>
  <string name="next_month">Next Month</string>
  <string name="CFC_importance_text">Priority at least ?</string>
  <string name="CFC_importance_name">Priority…</string>
  <string name="CFC_tag_text">Tag: ?</string>
  <string name="CFC_tag_name">Tag…</string>
  <string name="CFC_tag_contains_name">Tag name contains…</string>
  <string name="CFC_tag_contains_text">Tag name contains: ?</string>
  <string name="CFC_title_contains_name">Title contains…</string>
  <string name="CFC_title_contains_text">Title contains: ?</string>
  <string name="gcal_TEA_error">Error adding task to calendar!</string>
  <string name="gcal_TEA_showCalendar_label">Open Calendar Event</string>
  <string name="delete_calendar_event_confirmation">Delete calendar event?</string>
  <string name="calendar_event_not_found">Calendar event not found</string>
  <string name="gcal_completed_title">%s (completed)</string>
  <string name="CFC_gtasks_list_text">In List: ?</string>
  <string name="CFC_gtasks_list_name">In GTasks List…</string>
  <string name="CFC_caldav_list_name">In CalDAV list…</string>
  <string name="gtasks_GTA_clear_completed">Clear Completed</string>
  <string name="gtasks_GLA_authenticating">Authenticating…</string>
  <string name="gtasks_GLA_errorIOAuth">Sorry, we had trouble communicating with Google servers. Please try again later.</string>
  <string name="gtasks_GPr_header">Google Tasks</string>
  <string name="gtasks_error_accountNotFound">Account %s not found—please log out and log back in from the Google Tasks settings.</string>
  <string name="premium_record_audio">Record a note</string>
  <string name="premium_remove_file_confirm">Are you sure? Cannot be undone</string>
  <string name="audio_recording_title">Recording Audio</string>
  <string name="audio_stop_recording">Stop Recording</string>
  <string name="file_type_unhandled">Sorry! No application was found to handle this file type.</string>
  <string name="file_err_copy">Error copying file for attachment</string>
  <string name="ring_once">Ring once</string>
  <string name="ring_five_times">Ring five times</string>
  <string name="ring_nonstop">Ring nonstop</string>
  <string name="random_reminder_hour">an hour</string>
  <string name="random_reminder_day">a day</string>
  <string name="random_reminder_week">a week</string>
  <string name="random_reminder_two_weeks">in two weeks</string>
  <string name="random_reminder_month">a month</string>
  <string name="random_reminder_two_months">in two months</string>
  <string name="rmd_NoA_done">Complete</string>
  <string name="rmd_NoA_snooze">Snooze</string>
  <string name="server">Server</string>
  <string name="credentials">Credentials</string>
  <string name="certificate">Certificate</string>
  <string name="key">Key</string>
  <string name="ca">CA</string>
  <string name="trust">Trust</string>
</resources>